--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
   </head>
   <body>
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg bg-transparent navbar-dark position-fixed w-100">
+    <nav
+      class="navbar navbar-expand-lg bg-transparent navbar-dark position-fixed w-100"
+    >
       <div class="container">
         <a class="navbar-brand" href="#"
           ><img
@@ -75,19 +77,28 @@
     <!-- section hero -->
     <section id="hero">
       <div class="container h-100">
-        <div class="row h-100 ">
+        <div class="row h-100">
           <div class="col-md-6 my-auto text-hero">
             <h1>Membantu Temukan Rumah Impian.</h1>
             <p class="mt-4 mb-4">
-              <span class="fw-bold">Rumah Impian</span> hadir untuk temukan rumah terbaik untukmu, untuk di
-              jual ataupun di sewa dengan sumber terpercaya.
+              <span class="fw-bold">Rumah Impian</span> hadir untuk temukan
+              rumah terbaik untukmu, untuk di jual ataupun di sewa dengan sumber
+              terpercaya.
             </p>
             <button class="btn-lg">Temukan Rumah</button>
-            <img src="image/arrow.png" alt="">
+            <img src="image/arrow.png" alt="" />
           </div>
         </div>
-        <img src="image/hero-banner.png" alt="" class="position-absolute end-0 bottom-0 h-100">
-        <img src="image/accent-banner.png" alt="" class="position-absolute start-0 top-0 h-100 accent-banner">
+        <img
+          src="image/hero-banner.png"
+          alt=""
+          class="position-absolute end-0 bottom-0 h-100"
+        />
+        <img
+          src="image/accent-banner.png"
+          alt=""
+          class="position-absolute start-0 top-0 h-100 accent-banner"
+        />
       </div>
     </section>
     <!-- end section hero -->
@@ -96,9 +107,21 @@
     <section id="our-service">
       <div class="container h-100">
         <div class="row">
-          <div class="col-md">
+          <div class="col-md text-center">
             <h1>Layanan Kami</h1>
             <p>Rumah impian hadir menjadi solusi bagi kamu</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 card-layanan">
+            <div class="container-img position-relative">
+              <img src="image/house 1.png" alt="" height="45" />
+            </div>
+            <h4>Property Baru</h4>
+            <p>
+              Rumah impian kini jadi kenyataan, Beli rumah baru dengan fasilitas
+              terbaik dengan lingkungan yang nyaman.
+            </p>
           </div>
         </div>
       </div>
